[tool.poetry]
name = "data-science-wiki"
version = "0.1.0"
description = ""
authors = ["toma tanaka <ulti4929@gmail.com>"]
readme = "README.md"
packages = [{include = "data_science_wiki"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
ipykernel = "^6.24.0"
jupytext = "^1.14.7"
jupyter = "^1.0.0"
s3 = "^3.0.0"
boto3 = "^1.28.3"
botocore = "^1.31.3"
python-dotenv = "^1.0.0"
lightgbm = "^4.0.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
graphviz = "^0.20.1"
dtreeviz = "^2.2.2"
xgboost = "^1.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
