[tool.poetry]
name = "data-science-wiki"
version = "0.1.0"
description = ""
authors = ["toma tanaka <ulti4929@gmail.com>"]
readme = "README.md"
packages = [{include = "data_science_wiki"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
ipykernel = "^6.24.0"
jupytext = "^1.14.7"
jupyter = "^1.0.0"
s3 = "^3.0.0"
python-dotenv = "^1.0.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
graphviz = "^0.20.1"
dtreeviz = "^2.2.2"
lab = "^7.3"
jupyterlab-code-formatter = "^2.2.1"
black = "^23.7.0"
isort = "^5.12.0"
sentencepiece = "^0.1.99"
giotto-tda = "^0.6.0"
nbconvert = "^7.8.0"
ipywidgets = "^8.1.1"
xgboost = "^2.0.0"
statsmodels = "^0.14.0"
catboost = "^1.2.2"
openai = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
